# PROJECT-RPL

./: .gitignore  00_START_HERE.md  COMPLETION_CHECKLIST.md  CONTOH_OUTPUT_FINAL.md  DELIVERABLE_CHECKLIST.md  FINAL_REPORT_CONTOH_OUTPUT.md  Game Lempar Dadu (Dice Rolling Game).py  Game Tebak Angka (Number Guessing Game).py  Gunting Batu Kertas (Rock Paper Scissors).py  INDEX.md  OUTPUTS_SUMMARY.md  PROJECT_SUMMARY.md  Pembuat Kode QR (QR Code Generator).py  SOURCE_CODE_STRUCTURE.md  STRUCTURE_DOCUMENTATION.md  STRUCTURE_VISUAL_GUIDE.md  requirements.txt  setup.cfg
