[metadata]
name = project-rpl
version = 1.0.0
author = PROJECT_RPL
description = Kumpulan Game dan Utilitas Python untuk Pembelajaran
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/PROJECT_RPL
python_requires = >=3.7

[options]
packages = find:
package_dir =
    = src
install_requires =
    qrcode>=7.4.2
    Pillow>=10.1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-cov>=4.1.0

[options.entry_points]
console_scripts =
    dice-game = src.games.dice_game:play_dice_game
    guessing-game = src.games.guessing_game:play_guessing_game
    rps-game = src.games.rock_paper_scissors:play_rock_paper_scissors
    qr-gen = src.games.qr_generator:generate_qr_code
